--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "#Numerical gradient\n",
     "def eval_numerical_gradient(f, x):\n",
     "    \"\"\"\n",
     "    A function to compute the numerical gradient of a function f at the point x using finite differences.\n",
