--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -120,11 +120,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In practice:\n",
+    "\n",
+    "We always use the analytical gradient.\n",
+    "However, to ensure the correctness of the implementation, we compare the analytical gradient with the numerical gradient."
+   ]
   }
  ],
  "metadata": {
