backward propagation of errors

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -73,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -128,6 +135,160 @@
     "We always use the analytical gradient.\n",
     "However, to ensure the correctness of the implementation, we compare the analytical gradient with the numerical gradient."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vanilla Gradient Descent Implementation\n",
+    "\n",
+    "# Set the condition for continuous updates (e.g., you can break this when convergence is met)\n",
+    "##while True:\n",
+    "    # Calculate the gradient of the loss function with respect to the weights\n",
+    "    # 'evaluate_gradient' is a placeholder for the gradient calculation function\n",
+    "    ##gradient = evaluate_gradient(lossfun, data, weights)\n",
+    "    \n",
+    "    # Update the weights by subtracting the gradient (scaled by the learning rate/step size)\n",
+    "    ##weights += -step_size * gradient  # Gradient descent update rule\n",
+    "\n",
+    "    # Optional: Add a stopping condition based on a maximum number of iterations or convergence\n",
+    "    # For example, you can stop the loop when the change in weights is sufficiently small\n",
+    "    # or when the loss function reaches a minimum threshold\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A more efficient version of Mini-batch Gradient Descent can be implemented with a few optimizations to reduce redundant computations, speed up execution, and improve memory usage. Below is an optimized version of your code that utilizes vectorized operations where possible and ensures efficient mini-batch sampling and gradient evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mini-batch Gradient Descent Implementation\n",
+    "\n",
+    "# Parameters\n",
+    "batch_size = 256  # Size of the mini-batch (number of examples used in each iteration)\n",
+    "\n",
+    "while True:\n",
+    "    # Sample a mini-batch of 256 training examples\n",
+    "    # 'sample_training_data' is a function that randomly selects a batch of data points\n",
+    "    data_batch = sample_training_data(data, batch_size)\n",
+    "    \n",
+    "    # Calculate the gradient of the loss function with respect to the weights\n",
+    "    # 'evaluate_gradient' calculates the gradient for the mini-batch of data\n",
+    "    gradient = evaluate_gradient(loss_fun, data_batch, weights)\n",
+    "    \n",
+    "    # Update the weights using the gradient and learning rate (step_size)\n",
+    "    weights += -step_size * gradient  # Gradient update rule\n",
+    "    \n",
+    "    # Optional: Add a stopping condition based on the number of iterations or convergence\n",
+    "    # For example, you can stop after a certain number of iterations or when the loss change is small"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common values for batch size: 32, 128, and 256."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Key Point: Loss Function Plotting**\n",
+    "\n",
+    "To ensure the correctness of the algorithm, **the loss function should be plotted** at different intervals during training, showing a decreasing trend over time. This will confirm that the algorithm is converging and minimizing the loss as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vanilla Gradient Descent Implementation\n",
+    "\n",
+    "# Set the condition for continuous updates (e.g., you can break this when convergence is met)\n",
+    "##while True:\n",
+    "    # Calculate the gradient of the loss function with respect to the weights\n",
+    "    # 'evaluate_gradient' is a placeholder for the gradient calculation function\n",
+    "    ##gradient = evaluate_gradient(lossfun, data, weights)\n",
+    "    \n",
+    "    # Update the weights by subtracting the gradient (scaled by the learning rate/step size)\n",
+    "    ##weights += -step_size * gradient  # Gradient descent update rule\n",
+    "\n",
+    "    # Optional: Add a stopping condition based on a maximum number of iterations or convergence\n",
+    "    # For example, you can stop the loop when the change in weights is sufficiently small\n",
+    "    # or when the loss function reaches a minimum threshold\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example GIF](https://i.sstatic.net/qAx2i.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example GIF](https://i.sstatic.net/1obtV.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backward Propagation of errors\n",
+    "\n",
+    "***an algorithm for supervised learning of artificial neural networks using gradient descent***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gradient Computation and Backpropagation\n",
+    "\n",
+    "So far, we've defined a **scoring function** where, for each input, we assign scores based on the weights (**W**) for each class. Using these scores, we define a **loss** for each data point. \n",
+    "\n",
+    "One of these loss functions is the **hinge loss**, and we also introduced another loss function called **logistic regression**. By averaging the losses of all the data points in the training set, we calculate the **overall loss**, which tells us how poorly the weights (**W**) are performing:\n",
+    "- The **higher the loss**, the worse **W** is.\n",
+    "- The **lower the loss**, the better.\n",
+    "\n",
+    "Additionally, we discussed another term known as **regularization**, which helps us predict well even for new data.\n",
+    "\n",
+    "To use the **gradient descent algorithm**, the only thing we need to do is compute the **gradient** of the loss function with respect to the **W** parameters. \n",
+    "\n",
+    "### The Challenge of Gradient Computation\n",
+    "We can take derivatives from simpler functions. However, the issue arises when:\n",
+    "- The function becomes **too complex**, with **nested structures** and **numerous parameters**.\n",
+    "- In some cases, there might even be **millions of parameters**, making it impractical to manually derive each one using mathematical formulas.\n",
+    "\n",
+    "### The Solution: Backpropagation\n",
+    "To handle this, we require an **automatic method** to compute these gradients efficiently. This is precisely where the **backpropagation algorithm** comes into play, allowing us to perform these computations automatically and systematically.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example GIF](https://miro.medium.com/v2/resize:fit:1280/format:webp/1*VF9xl3cZr2_qyoLfDJajZw.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
